<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"

    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/url_list_cardview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/url_list"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/nomlList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/url_list_name_url"
            android:background="@color/url_list"
            android:layout_marginStart="3dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/urlTitreList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_marginStart="3dp"
            android:text="@string/rss_list_url"
            android:layout_below="@+id/nomlList"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/urlList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_toEndOf="@+id/urlTitreList"
            android:layout_below="@+id/nomlList"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3dp" />

        <!-- Champ TextView caché contenant l'url non modifiée (si trop longue pour affichage -->
        <TextView
            android:id="@+id/urlListHidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_toEndOf="@+id/urlTitreList"
            android:layout_below="@+id/nomlList"
            android:layout_marginTop="4dp"
            android:layout_marginStart="3dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/categoryTitleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_marginStart="3dp"
            android:text="@string/rss_list_category"
            android:layout_below="@+id/urlTitreList"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/categoryList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_toEndOf="@+id/categoryTitleList"
            android:layout_below="@+id/urlTitreList"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/activeTitleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_marginStart="3dp"
            android:text="@string/rss_list_active"
            android:layout_below="@+id/categoryTitleList"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/activeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/url_list_text"
            android:background="@color/url_list"
            android:layout_toEndOf="@+id/activeTitleList"
            android:layout_below="@+id/categoryTitleList"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp" />

        <Switch
            android:id="@+id/switchActif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rss_list_active_change"
            android:layout_below="@+id/activeTitleList"
            android:layout_alignStart="@+id/nomlList"
            android:theme="@style/ActifSwitch"
            android:textColor="@color/url_list_text"/>

        <ImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_edit_url"
            android:layout_below="@+id/activeTitleList"
            android:background="@color/url_list"
            android:layout_alignEnd="@+id/nomlList"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/rss_url_list_content_modify" />

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_delete_url"
            android:layout_below="@+id/activeTitleList"
            android:background="@color/url_list"
            android:layout_alignEnd="@+id/nomlList"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/rss_url_list_content_delete"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>